<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Strathclyde</string>
    <string name="Backend_Developer">Backend Developer</string>
    <string name="Advance_Software_Engineering">Advance Software Engineering</string>
    <string name="Final_Year">Final Year</string>
    <string name="email">Govindjsk719@gmail.com</string>
    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="about_college">
More than 23,000 students from over 100 countries enjoy a student experience at the University of Strathclyde, one of the leading technology universities in the UK. Located in the heart of the city of Glasgow, you will receive excellent teaching, be part of world-class research and benefit from excellent links with industry. Strathclyde has a strong reputation with employers for producing top quality graduates, making it the perfect place to prepare for your future career. Before you join your chosen degree programme, you can study at the International Study Centre to prepare for your degree with other international students.

</string>
    <string name="abt">
        The University maintains high standards of excellence in the academic sphere and in the physical amenities and facilities intended to implement the educational programme. The College endeavours to enroll students who hold high standards of performance, discipline and achievement.In addition to the autonomous curriculum which is expected to provide a broad foundation of general education and a reasonable amount of specialization, a diversified programme of campus activities-social, recreational, cultural and religious-supplements and complements the academic study and provides facilities and opportunities for the development of individual talent, personal relationship and creative group life with high moral standards
    </string>

    <string-array name="theme">

        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>

</resources>