<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardMaxElevation="10dp"
   app:cardBackgroundColor="#F4F2F2"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/cls_icon"
                android:layout_marginRight="20dp"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/cls_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="35dp"
                android:fontFamily="@string/bold"
                android:text="Classes"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/title_size" />
        </LinearLayout>


            <TextView

                android:id="@+id/cls_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_college"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>






    </LinearLayout>

</com.google.android.material.card.MaterialCardView>