<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".developer.Developer">

    <LinearLayout
        android:id="@+id/nivetha"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
        <LinearLayout
            android:id="@+id/details"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/dev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Backend_Developer"

                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:layout_below="@+id/dev"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Govind Singh"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:id="@+id/bsc"
                    android:layout_below="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Advance_Software_Engineering"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:id="@+id/sec"
                    android:layout_below="@+id/bsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Final_Year"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:layout_below="@+id/sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>





</ScrollView>